# fynd-ai-assessment

./: .gitignore  DEPLOYMENT_COMPLETE.md  DEPLOYMENT_INSTRUCTIONS.md  NEXT_STEPS.md  README.md  SUBMISSION_CHECKLIST.md  SUBMISSION_REPORT.md  pyproject.toml  task1_rating_prediction.ipynb
backend/: render.yaml  requirements.txt
backend/app/: main.py
backend/app/api/: predictions.py  reviews.py
backend/app/models/: schemas.py
backend/app/services/: ai_service.py  data_service.py
docs/: API_DOCUMENTATION.md  DEPLOYMENT.md  QUICKSTART.md
frontend/: netlify.toml  package-lock.json  package.json
frontend/public/: index.html
frontend/src/: App.js
frontend/src/components/: AnalyticsCharts.js  ReviewCard.js
frontend/src/pages/: AdminPage.js  UserPage.js
frontend/src/services/: api.js
frontend/src/styles/: neubrutalism.css
task1_results/: all_results_combined.csv  metrics_comparison.csv  task1_summary.json
